--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
+    "motion": "^12.6.3",
     "next": "15.2.1",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.5",
